--- a/hello.html
+++ b/hello.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello page</h1>
-        <p>This is the hello page.</p>
+        <h1>Hello page</h1>#page heading 
+        <p>This is the hello page.</p>#info
         <p>Go to <strong><a href="/index.html">Index Page</a></strong></p>
 </body>
 </html>
