--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,6 @@
     <div class="container">
         <h1>Hello page</h1>
         <p>This is the hello page.</p>
-        <p>Go to <strong><a href="/index.html">Index Page</a></strong></p>
+        <p>Go to <strong><a href="/index.html">INDEX PAGE</a></strong></p>
 </body>
 </html>
